# variable-bits

./: LICENSE  README.md
variable-streams/: CMakeLists.txt
variable-streams/c23/: CMakeLists.txt
variable-streams/c23/src/: bit_stream.c  bit_stream.h  bit_stream_reader.c  bit_stream_writer.c  bit_value.c  uint128.c
variable-streams/c23/test/: CMakeLists.txt  test_bit_stream.c  test_bit_stream_reader_writer.c  test_bit_value.c
variable-streams/cpp/: CMakeLists.txt
variable-streams/dotnet/: VariableBits.sln
variable-streams/dotnet/src/VariableBits/: BitStream.cs  BitStreamException.cs  BitStreamReader.cs  BitStreamWriter.cs  BitValue.cs  VariableBits.csproj
variable-streams/dotnet/tests/VariableBits.Tests/: BitStreamReaderTests.cs  BitStreamTests.cs  BitStreamWriterTests.cs  BitValueTests.cs  VariableBits.Tests.csproj
variable-streams/java/: README.md  pom.xml
variable-streams/java/src/main/java/com/aidanjmorgan/variablebits/: BitStream.java  BitStreamException.java  BitStreamReader.java  BitStreamWriter.java  BitValue.java
variable-streams/java/src/test/java/com/aidanjmorgan/variablebits/: BitStreamIntegrationTest.java  BitStreamReaderTest.java  BitStreamWriterTest.java
variable-streams/python/: CMakeLists.txt  pyproject.toml
variable-streams/python/src/variable_streams/: __init__.py  bit_stream.py  bit_stream_reader.py  bit_stream_writer.py  bit_value.py
variable-streams/python/tests/: test_bit_stream.py  test_bit_stream_reader_writer.py  test_bit_value.py
variable-streams/tests/integration/: pyproject.toml
