[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "variable_streams"
version = "0.1.0"
description = "A Python implementation of variable bit streams"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["src/variable_streams"]